# online-shop-django

./: Dockerfile.local  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
account/: models.py
djshop/: settings.py
shop/: urls.py  views.py
theme/templates/about/: about.html
theme/templates/snippets/: footer.html  header.html
