[tool.poetry]
name = "online-shop-django-master"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "online_shop_django_master"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.7"
asgiref = "^3.7.2"
"backports.zoneinfo" = "^0.2.1"
django-crispy-forms = "^2.1"
Pillow = "^10.1.0"
sqlparse = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
